<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TinasNewMaths</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="calcnum0">0</string>
    <string name="calcnum1">1</string>
    <string name="calcnum2">2</string>
    <string name="calcnum3">3</string>
    <string name="calcnum4">4</string>
    <string name="calcnum5">5</string>
    <string name="calcnum6">6</string>
    <string name="calcnum7">7</string>
    <string name="calcnum8">8</string>
    <string name="calcnum9">9</string>
    <string name="calc_clear">Clear</string>
    <string name="calc_enter">Enter</string>
    
    <string name="chk_are_cards_removable" >Are Cards Removable\?</string>
    <string name="chk_is_group_mode"       >Is studying done with groups\?</string>
    <string name="chk_is_group_review_date">Does the group load cards based on their date\?</string>

    <string name="deck_gui_type_prompt"      >Choose a deck type</string>
    <string name="fail_limit_prompt"         >Fail Limit</string>
    <string name="success_limit_prompt"      >Success Limit</string>
    <string name="card_limit_prompt"         >Card Per Session</string>
    <string name="are_cards_removable_prompt">Remove a Card After it\'s Completed\?</string>
   
    <string name="deck_gui_type_comment"       >This is the type of layout needed to display the deck.</string>
    <string name="fail_limit_comment"          >Will reset the box number if you get a card wrong \'x\' times.</string>
    <string name="success_limit_comment"       >Number of times you need to answer a card correctly to complete it.</string>
    <string name="card_limit_comment"          >Number of cards to study in a session.</string>
    <string name="is_group_mode_comment"       >Are the cards found by groups, or not(find any card that needs a review)\?</string>
    <string name="is_group_review_date_comment">Are the groups found by review date\?</string>
    
 
    <string-array name="deck_gui_type_arrays">
        <item>Flashcard</item>
        <item>Maths</item>
        <item>Keyboard</item>
        <item>ReadingAndSpelling</item>
    </string-array>
</resources>