<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextViewSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:text="@string/hello_world"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/textViewEnteredNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:text=""
        android:textSize="48sp" />

    <ImageView
        android:id="@+id/imageTickOrCrossMaths"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Shows a tick if the answer is correct."
        android:src="@drawable/answer_tick" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:gravity="fill_horizontal">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="25"
                android:text="@string/calcnum1"
                android:textSize="@dimen/calctextsize" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calcnum2"
                android:textSize="@dimen/calctextsize" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calcnum3"
                android:textSize="@dimen/calctextsize" />
            android:layout_height="wrap_content"

            <Button
                android:id="@+id/button_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calc_enter"
                android:textSize="@dimen/calctextsize" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calcnum4"
                android:textSize="@dimen/calctextsize" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calcnum5"
                android:textSize="@dimen/calctextsize" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calcnum6"
                android:textSize="@dimen/calctextsize" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calc_clear"
                android:textSize="@dimen/calctextsize" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calcnum7"
                android:textSize="@dimen/calctextsize" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calcnum8"
                android:textSize="@dimen/calctextsize" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calcnum9"
                android:textSize="@dimen/calctextsize" />

            <TextView
                android:id="@+id/TextBlank1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text=""
                android:textSize="1sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextBlank2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text=""
                android:textSize="1sp" />


            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/calcnum0"
                android:textSize="@dimen/calctextsize" />

            <TextView
                android:id="@+id/TextBlank3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text=""
                android:textSize="1sp" />

            <TextView
                android:id="@+id/TextBlank4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text=""
                android:textSize="1sp" />
        </TableRow>


    </TableLayout>
</LinearLayout>